# QtSimpleProgressDialog_cmk

./: CMakeLists.txt  QtSimpleProgressDialog.pro  README.md
Demo/: CMakeLists.txt  Demo.pro  mainwindow.cpp  mainwindow.ui
QtSimpleProgressDialog/: CMakeLists.txt  QtSimpleProgressDialog.pro  QtSimpleProgressDialogConfig.cmake.in  qtcustomprogressdialog.cpp  qtcustomprogressdialog.h  qtsimpleprogressdialog.cpp  qtsimpleprogressdialog.h  qtsimpleprogressdialog_global.h
